Fix issues generating reference image in KisMergeLabeledLayersCommand

BUG:471896
BUG:472700